--- a/css/styles.less
+++ b/css/styles.less
@@ -1,9 +1,12 @@
 html, body{
 	font-family: sans-serif;
-	background: #ccc;
-				
+	background: #fff;
+	color: #333;
+	
+	/* Just an example media querie */
 	@media screen and (max-width: 640px) {
 		background: #333;
+		color: #fff;
 	}
 }
 
